--- a/SonataGlass/res/layout/card_picture_taken.xml
+++ b/SonataGlass/res/layout/card_picture_taken.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black" >
+    android:background="@color/black" android:id="@+id/cardPictureTaken" >
     <TextView
         android:id="@+id/picture_taken_view"
         android:layout_width="match_parent"
